# src/modules/payment/route.js
@@ -1,17 +1,45 @@
 import express from "express";
-import { sendPaymentOtp } from "./controller.js";
-import { sendPaymentOtpValidator } from "./validation.js";
-import { sendOtpLimiter } from "./rateLimiter.js";
+import {
+  sendPaymentOtp,
+  verifyPaymentOtp,
+  resendPaymentOtp,
+} from "./controller.js";
+import {
+  sendPaymentOtpValidator,
+  verifyPaymentOtpValidator,
+  resendPaymentOtpValidator,
+} from "./validation.js";
+import {
+  sendOtpLimiter,
+  verifyOtpLimiter,
+  resendOtpLimiter,
+} from "./rateLimiter.js";
 import { isAuthenticated } from "../../middlewares/authentication.js";
 
-const paymentOtpRouter = express.Router();
+const paymentRouter = express.Router();
 
-paymentOtpRouter.post(
-  "/send-otp",
+paymentRouter.get(
+  "/send-otp/:cartId",
   sendOtpLimiter,
   isAuthenticated,
   sendPaymentOtpValidator,
   sendPaymentOtp
 );
 
-export default paymentOtpRouter;
+paymentRouter.post(
+  "/verify-otp",
+  verifyOtpLimiter,
+  isAuthenticated,
+  verifyPaymentOtpValidator,
+  verifyPaymentOtp
+);
+
+paymentRouter.patch(
+  "/resend-otp/:cartId",
+  resendOtpLimiter,
+  isAuthenticated,
+  resendPaymentOtpValidator,
+  resendPaymentOtp
+);
+
+export default paymentRouter;
